# opencrust

./: .gitignore  Cargo.toml  README.md
assets/webchat/: main.js  styles.css
crates/opencrust-agents/: Cargo.toml
crates/opencrust-agents/src/: lib.rs  runtime.rs
crates/opencrust-agents/src/mcp/: manager.rs  mod.rs  resource_tool.rs  tool_bridge.rs
crates/opencrust-agents/src/tools/: doc_search_tool.rs  file_read_tool.rs  mod.rs
crates/opencrust-channels/: Cargo.toml
crates/opencrust-channels/src/: lib.rs  telegram.rs  traits.rs
crates/opencrust-channels/src/discord/: handler.rs  mod.rs
crates/opencrust-channels/src/line/: mod.rs  webhook.rs
crates/opencrust-channels/src/slack/: mod.rs
crates/opencrust-channels/src/wechat/: api.rs  fmt.rs  mod.rs  webhook.rs
crates/opencrust-cli/: Cargo.toml
crates/opencrust-cli/src/: banner.rs  doctor.rs  main.rs  mcp_registry.rs  wizard.rs
crates/opencrust-config/src/: lib.rs  model.rs  providers.rs
crates/opencrust-db/src/: lib.rs  migrations.rs  session_store.rs
crates/opencrust-gateway/: Cargo.toml
crates/opencrust-gateway/assets/: app.js
crates/opencrust-gateway/src/: a2a.rs  api.rs  bootstrap.rs  ingest.rs  lib.rs  router.rs  server.rs  state.rs  webchat.html  ws.rs
crates/opencrust-media/: Cargo.toml
crates/opencrust-media/src/: tts.rs
crates/opencrust-security/src/: credentials.rs  lib.rs  validation.rs
i18n/: README.th.md
sidecar/whatsapp-web/: package-lock.json
