[package]
name = "opencrust-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media processing (image, audio, video) for OpenCrust"

[features]
default = []
## Enable Kokoro TTS via a self-hosted kokoro-fastapi server.
## Usage: cargo build --features opencrust-media/tts-kokoro
tts-kokoro = []

[dependencies]
opencrust-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
pdf-extract = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
